# homelab-monitor

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  agent.py  app.py  config.yml  dashboard  docker-compose.yml  install.ps1  install.sh  opencode.json  pyproject.toml  requirements.txt  wizard.py
dashboard/: index.html
hlm_cli/: __init__.py  agent.py  integrations.py  server.py  updater.py  wizard.py
hlm_cli/dashboard/: index.html
