[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "homelab-monitor"
version = "1.0.0"
description = "Self-hosted homelab monitoring dashboard"
requires-python = ">=3.8"
dependencies = []

[project.scripts]
hlm = "hlm_cli:main"

[tool.setuptools.packages.find]
include = ["hlm_cli*"]
