[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "homelab-monitor"
version = "1.0.0"
description = "Self-hosted homelab monitoring dashboard"
requires-python = ">=3.8"
dependencies = [
    "flask>=3.0",
    "flask-cors>=5.0",
    "psutil>=6.0",
    "pyyaml>=6.0",
]

[project.scripts]
hlm = "hlm_cli:main"

[tool.setuptools.packages.find]
include = ["hlm_cli*"]
 
[tool.setuptools.package-data]
hlm_cli = ["dashboard/*", "dashboard/**/*"]
